# dravix-os

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  repository.yaml
core/: pyproject.toml
core/dravix/: __init__.py  __main__.py  agent_status.py  aifun.py  app.py  bidi.py  climate_bridge.py  config.py  dashboard_bridge.py  discovery.py  emotes.py  events.py  fun.py  localmode.py  logging.py  memory.py  mood.py  persona.py  personality.py  pethead.py  privacy.py  reactions.py  recorder.py  routines.py  scheduler.py  screens.py  state.py  store.py  updates.py  vitals.py
core/dravix/ai/: __init__.py  base.py  claude.py  ha_assist.py  ollama.py  openai_provider.py
core/dravix/api/: routes.py
core/dravix/dal/: __init__.py  base.py  ha_driver.py  mcp_driver.py  mock_driver.py
core/dravix/integrations/: __init__.py  frigate.py  ha_events.py  homeassistant.py  (+2 more)
core/scripts/: discover.py
core/tests/: test_agent_status.py  test_bidi.py  test_climate.py  test_climate_bridge.py  test_config_api.py  test_dashboard_bridge.py  test_discovery.py  test_drivers.py  test_frigate.py  test_fun.py  test_ha_events.py  test_hardening.py  test_inbox_aifun.py  test_memory_routines.py  test_mood.py  test_notify.py  test_people.py  test_persona.py  test_personality.py  test_pethead.py  test_phase2.py  test_plugin_dnd.py  test_privacy_gate.py  test_providers.py  test_reactions.py  test_scheduler.py  test_screens.py  test_security_gallery.py  test_smoke.py  test_store.py  test_teleop.py  test_updates.py  test_voice.py  test_welcome.py  test_xiaozhi.py
(+141 files in other folders)
