[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dravix-os"
version = "0.0.64"
description = "Companion OS layer for the M5Stack StackChan robot"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "websockets>=12",
    "pyyaml>=6",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Cloud AI providers (only needed if DRAVIX_AI_PROVIDER is claude or openai).
providers = [
    "anthropic>=0.40",
    "openai>=1.30",
]

[project.scripts]
dravix = "dravix.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["dravix"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
